# oop-games

./: .gitignore  README.md
.github/workflows/: c-cpp.yml  cmake.yml  maven.yml
minesweeper/: board.h  board_win.h  info_win.h  minesweeper.run  tile.h
report/: .gitignore  report.aux  report.fdb_latexmk  report.fls  report.tex
task1/: .gitignore  pom.xml  run.sh
task1/src/main/java/mt/grigolo/: Globals.java  Main.java
task1/src/main/java/mt/grigolo/buildings/: Building.java
task1/src/main/java/mt/grigolo/clash_of_clubs/: Main.java
task1/src/main/java/mt/grigolo/exceptions/: ArmyAwayException.java  ArmyBusyException.java  ArmyEmptyException.java  ArmyFullException.java  InsufficientResourceException.java  MaxLevelException.java
task1/src/main/java/mt/grigolo/game/: Game.java  Map.java  Village.java
task1/src/main/java/mt/grigolo/players/: Player.java  Village.java
task2/: .gitignore  Board.cpp  Board.h  BoardWindow.cpp  BoardWindow.h  CMakeLists.txt  Game.h  InfoWindow.cpp  InfoWindow.h  Tile.cpp  Tile.h  Window.cpp  Window.h  build.sh  cmake_build.sh
task2/.cmake/api/v1/reply/: cache-v2-0c302963376c331365e7.json  cmakeFiles-v1-24e933a3c476e730fde9.json  codemodel-v2-13ba4ff168854441f0aa.json  index-2023-01-12T00-11-51-0225.json  target-minesweeper-Debug-16d1afe61cbc3da50d17.json  toolchains-v1-84f2c42f90c4b86b066f.json
task2/src/: Board.cpp  Board.h  BoardWindow.cpp  BoardWindow.h  CMakeLists.txt  Game.cpp  InfoWindow.cpp  InfoWindow.h  Main.cpp  Makefile  Tile.cpp  Tile.h  b64  board.h  game.h  main.cpp  ms
(+82 files in other folders)
